# custom_lavka

./: CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml  openapi.json
configs/: config_vars.docker.yaml  config_vars.docker_solution.yaml  config_vars.yaml  config_vars_testing.yaml  dynamic_config_fallback.json  static_config.yaml.in
postgresql/schemas/: db1.sql
src/: hello.cpp  hello.hpp  hello_test.cpp  lavka.cpp  lavka.h  main.cpp
src/couriers/: CouriersHandler.cpp  CouriersHandler.h  CouriersIDHandler.cpp  CouriersIDHandler.h  CouriersMetaInfoHandler.cpp  CouriersMetaInfoHandler.h
src/orders/: OrdersAssignHandler.cpp  OrdersAssignHandler.h  OrdersCompleteHandler.cpp  OrdersCompleteHandler.h  OrdersHandler.cpp  OrdersHandler.h  OrdersIDHandler.cpp  OrdersIDHandler.h
tests/: CMakeLists.txt  conftest.py
tests/dataset_for_rating/: complete_orders.txt  couriers.txt  log.txt  orders.txt  request_commands.txt  result.txt
